...

enum CropRatio {
  original('원본 비율', null),
  portrait('9:16', 9 / 16),
  landscape('16:9', 16 / 9),
  fourFive('4:5', 4 / 5),
  threeFour('3:4', 3 / 4),
  square('1:1', 1);

  const CropRatio(this.label, this.aspect);
  final String label;
  final double? aspect;
}
...
